--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://jaketempx.github.io/" 
+baseURL: "https://jakemnieto.github.io/jakemnieto" 
 title: "Jake Nieto Personal Site"
 theme: PaperMod
 
